fixed z-index

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -51,7 +51,8 @@ header {
   transition: -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
   transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
   transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s, -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
-  z-index: 1000; }
+  z-index: 1;
+}
 
 header .headerButton {
   width: 24px;
@@ -103,6 +104,7 @@ main {
 #mapid {
   width: 100%;
   min-height: 40%;
+  z-index: 2;
   flex: 1 0; }
 
 p {
